# my-new-project

./: Dockerfile  LICENSE  README.md  metadata.json  setup.cfg  tox.ini
.sqa/: config.yml
my_new_project/: api.py
tests/: test_api.py
