# -*- coding: utf-8 -*-
[metadata]
name = my_new_project
summary = my project here
description-file =
    README.md
author = me
author-email = my@email
version = 0.0.1
license = Apache 2.0
home-page = https://github.com/ai4os-hub/my-new-project
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    my_new_project

[entry_points]
deepaas.v2.model =
    my_new_project = my_new_project.api
